NGLASS-459 Fix content of the sections overlapping in render tab

--- a/src/widget/accordion.css
+++ b/src/widget/accordion.css
@@ -5,7 +5,6 @@
 }
 
 .accordion-expanded {
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
